api docs fix
